--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +17,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "vite": "^6.0.2"
   }
 }
